XMLtoCSV/objects/unpackaged/objects/Survey_Target_vod__c.object
<CustomObject>
    <description>A survey record that combines header information, questions, an account, and an assigned user.</description>
    <fields>
        <fullName>Account_Display_Name_vod__c</fullName>
        <description>For Internal Use Only.</description>
        <label>Account Display Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Types_vod__c</fullName>
        <description>The types of accounts that can be included in this survey.</description>
        <label>Account Types</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Looks up the ID of the associated account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>My_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channels_vod__c</fullName>
        <description>Copy of the channels field from the Survey_vod object.</description>
        <label>Channels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coach_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the Coach who initiated the coaching process.</description>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Targets_Coach_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Datetime_vod__c</fullName>
        <description>Date/Time that the Employee Completed/Reviewed the Coaching report.</description>
        <label>Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Detail Group to which the Coaching Survey was associated.</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Survey Targets (Detail Group)</relationshipLabel>
        <relationshipName>Survey_Targets_Detail_Group_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the Employee who is being coached.</description>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Targets_Employee_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>Copy of the end date of the survey from the Survey_vod object.</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>For Internal Use Only.</description>
        <label>Entity Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is used for data loading only.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language_vod__c</fullName>
        <description>Copy of the language of the survey from the Survey_vod object.</description>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>zh_CN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zh_TW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>da</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nl_NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>el</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt_BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es_MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>th</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users with edit privileges to this field will be able to unlock a survey and edit its contents after it has been published.</description>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>No_Autoassign_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked, the publishing process will not change the owner of the record.</description>
        <label>Don&apos;t change owner on publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Completed_vod__c</fullName>
        <description>Captures if a survey target record was submitted before its end date.</description>
        <formula>IF(AND(End_Date_vod__c&lt;TODAY(),NOT(ISPICKVAL(Status_vod__c,&quot;Submitted_vod&quot;)),NOT(ISPICKVAL(Status_vod__c,&quot;Late_Submission_vod&quot;))),&quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Completed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Product to which the Coaching Survey was associated.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Survey Targets</relationshipLabel>
        <relationshipName>Survey_Targets_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name_vod__c</fullName>
        <description>Name of the Profile to which the Coaching Survey was associated.</description>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recalled_Datetime_vod__c</fullName>
        <description>Date/Time that the Coach chose to recall the Coaching report.</description>
        <label>Recalled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Region_vod__c</fullName>
        <description>Copy of the region of the survey from the Survey_vod object.</description>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Status_vod__c</fullName>
        <description>Picklist that indicates the status of the coaching report. When &apos;In Progress&apos;, the manager can update the report. When &apos;Under Employee Review&apos;, the report has been sent to the Employee. When &apos;Completed&apos; the employee has indicated that the responses have been reviewed.</description>
        <label>Report Status</label>
        <picklist>
            <picklistValues>
                <fullName>In_Progress_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under_Employee_Review_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_Date_vod__c</fullName>
        <description>Indicates the specific date that the coaching report was executed.</description>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Score_vod__c</fullName>
        <description>Sum of the response weights for an account for this survey.</description>
        <label>Score</label>
        <summarizedField>Question_Response_vod__c.Score_vod__c</summarizedField>
        <summaryForeignKey>Question_Response_vod__c.Survey_Target_vod__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Segment_vod__c</fullName>
        <description>Segment corresponding to account’s survey score.</description>
        <label>Segment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sent_Email_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Originating email that launched the survey for the account</description>
        <label>Sent Email</label>
        <referenceTo>Sent_Email_vod__c</referenceTo>
        <relationshipLabel>Survey Targets</relationshipLabel>
        <relationshipName>Survey_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_To_Employee_Datetime_vod__c</fullName>
        <description>Date/Time that the Coach submitted the report by sending it to the Employee.</description>
        <label>Sent to Rep Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Share_Team_vod__c</fullName>
        <description>Share Team value to which the Coaching Survey was associated.</description>
        <label>Share Team</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Copy of the start date of the survey from the Survey_vod object.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>•Development – survey has not been published
•Pending – survey has been published; awaiting rep response
•Saved – rep response has been saved
•Submitted – rep response has been submitted
•Late Submission - the survey was submitted after the end date</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Development_vod</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late_Submission_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up the ID of the associated survey.</description>
        <label>Survey Name</label>
        <referenceTo>Survey_vod__c</referenceTo>
        <relationshipName>Survey_Targets_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territories_vod__c</fullName>
        <description>Allows selection of multiple territories when creating a survey. When publishing a survey, only users in these territories will be selected for target assignment. On open surveys, only users within these territories will be able to select their own targets.</description>
        <label>Included user territories:</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Territory_vod__c</fullName>
        <description>Limits the users that can complete the survey by territory.</description>
        <label>Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for User Surveys to identify the targeted employee for the survey.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Targets_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zvod_Address_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field for displaying the preferred address when available.</description>
        <label>zvod_Address_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Coaching_Questions_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>zvod marker field that drives the placement of the Coaching Survey Questions</description>
        <label>zvod_Coaching_Questions_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Specialty_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field for pulling the account&apos;s specialty when loading a survey target record.</description>
        <label>zvod_Specialty_vod</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Account_vod__c</columns>
        <columns>Status_vod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Completed_Survey_Targets</fullName>
        <columns>NAME</columns>
        <columns>Account_vod__c</columns>
        <columns>Status_vod__c</columns>
        <columns>Start_Date_vod__c</columns>
        <columns>End_Date_vod__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status_vod__c</field>
            <operation>equals</operation>
            <value>Submitted_vod,Late_Submission_vod</value>
        </filters>
        <label>My Completed Survey Targets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Survey_Targets</fullName>
        <columns>NAME</columns>
        <columns>Account_vod__c</columns>
        <columns>Status_vod__c</columns>
        <columns>Start_Date_vod__c</columns>
        <columns>End_Date_vod__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status_vod__c</field>
            <operation>equals</operation>
            <value>Development_vod,Pending_vod,Saved_vod</value>
        </filters>
        <label>My Open Survey Targets</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Survey Target</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Targets</pluralLabel>
    <recordTypes>
        <fullName>Coaching_Report_vod</fullName>
        <active>true</active>
        <description>Used for internal coaching reports.</description>
        <label>Coaching_Report_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>One_Time_vod</fullName>
        <active>true</active>
        <description>One-Time surveys can be submitted once per account.</description>
        <label>One_Time_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recurring_vod</fullName>
        <active>true</active>
        <description>Recurring surveys can be submitted multiple times before the end date, with each submission counting as a new record.</description>
        <label>Recurring_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Survey_vod</fullName>
        <active>true</active>
        <description>Used for surveying employees.</description>
        <label>User_Survey_vod</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>End_Date_After_Start_Date</fullName>
        <active>true</active>
        <description>Survey end date must be later than start date, otherwise SURVEY_END_DATE_ERROR appears under the save / cancel buttons.</description>
        <errorConditionFormula>End_Date_vod__c &lt; Start_Date_vod__c</errorConditionFormula>
        <errorMessage>The end date must be later than the start date.</errorMessage>
    </validationRules>
</CustomObject>